data/all_generated_tests/raw_wast_tests/block_InvalidorInconsistentControlFlowGraph_2457.wast
;; 8. **Test Description**: Implement a sequence of blocks where one block incorrectly shares an operand stack state dependency with another block at a different nesting level. WebAssembly may mishandle stack states compared to `wizard_engine`'s controlled state reset.    - **Constraint Checked**: Operand stack management with nested blocks.    - **Relation to CFG**: CFG inconsistencies due to stack mismanagement affecting execution paths.

(assert_invalid
  (module (func $stack-dependency-error 
    (block (result i32)
      (block (result i32) 
        (i32.const 42) 
        (br 0 (i32.const 1))
      )
      (drop)
      (i32.const 99)
    )
    (i32.const 7)
    (br 0 (i32.const 3))
  ))
  "type mismatch"
)